// Copyright 2024 The Cross-Media Measurement Authors
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//      http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package wfa.frequency_count;

import "wfa/frequency_count/secret_share.proto";

option java_package = "org.wfanet.frequencycount";
option java_multiple_files = true;

// The request to encrypt a sketch.
message ShareShuffleGeneratorRequest {
  uint32 ring_modulus = 1;
  // The input frequency vector
  repeated uint32 data = 2;
}
